--- a/backend/alembic.ini
+++ b/backend/alembic.ini
@@ -84,7 +84,7 @@ path_separator = os
 # database URL.  This is consumed by the user-maintained env.py script only.
 # other means of configuring database URLs may be customized within the env.py
 # file.
-sqlalchemy.url = postgresql+psycopg2://testing:passwordfortesting@localhost:5432/nexolocal
+sqlalchemy.url = postgresql+psycopg2://nexolocal:nexolocalpassworddatabase@nexolocal-postgres:5432/nexolocal
 #driver://testing:passwordfortesting@localhost/nexolocal
 
 
